src/packages/danu/src/module_danu_iface.f90


interface
    subroutine danu_group_close_f(group,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),            intent(inout) :: group
    integer(kind=C_INT),    intent(out)   :: ierr
    end subroutine danu_group_close_f
end interface

! --- Meshes

interface
    subroutine mesh_count_f(ptr,mesh_count,flag) bind(c)
    use iso_c_binding
    type(C_PTR),         intent(in)  :: ptr
    integer(kind=C_INT), intent(out) :: mesh_count
    integer(kind=C_INT), intent(out) :: flag
    end subroutine mesh_count_f
end interface   

interface
    subroutine mesh_list_f(ptr,names,name_len,name_size,flag) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(out) :: names(*)
    integer(kind=C_INT),                        intent(in)  :: name_len
    integer(kind=C_INT),                        intent(in)  :: name_size
    integer(kind=C_INT),                        intent(out) :: flag
    end subroutine mesh_list_f
end interface    

interface
    subroutine mesh_exists_f(ptr,mesh_name,name_len,flag,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: ptr
    character(kind=C_CHAR),       intent(in)  :: mesh_name(*)
    integer(kind=C_INT),          intent(in)  :: name_len
    integer(kind=C_INT),          intent(out) :: flag
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_exists_f
end interface    

interface
    subroutine mesh_open_f(ptr,mesh_name,name_len,mid,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: ptr
    character(kind=C_CHAR),       intent(in)  :: mesh_name(*)
    integer(kind=C_INT),          intent(in)  :: name_len
    type(C_PTR),                  intent(out) :: mid
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_open_f
end interface    

interface
    subroutine mesh_add_unstructured_f(ptr,                                   &
                                      mesh_name,                              &
                                      name_len,                               &
                                      elemorder,                              &
                                      mesh_dim,                               &
                                      mid,                                    &
                                      ierr)                                   &
                                      bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: ptr
    character(kind=C_CHAR),       intent(in)  :: mesh_name(*)
    integer(kind=C_INT),          intent(in)  :: name_len
    integer(kind=C_INT),          intent(in)  :: elemorder
    integer(kind=C_INT),          intent(in)  :: mesh_dim
    type(C_PTR),                  intent(out) :: mid
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_add_unstructured_f
end interface    

interface
    subroutine mesh_write_coordinates_f(mptr,                                 &
                                        nnodes,                               &
                                        x,                                    &
                                        y,                                    &
                                        z,                                    &
                                        ierr)                                 &
                                        bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(in)  :: nnodes
    real(kind=C_DOUBLE),          intent(in)  :: x(*)
    real(kind=C_DOUBLE),          intent(in)  :: y(*)
    real(kind=C_DOUBLE),          intent(in)  :: z(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_write_coordinates_f
end interface 

interface
    subroutine mesh_write_coordinates_1d_f(mptr,                                 &
                                           nnodes,                               &
                                           x,                                    &
                                           ierr)                                 &
                                           bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(in)  :: nnodes
    real(kind=C_DOUBLE),          intent(in)  :: x(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_write_coordinates_1d_f
end interface 

interface
    subroutine mesh_write_coordinates_2d_f(mptr,                                 &
                                           nnodes,                               &
                                           x,                                    &
                                           y,                                    &
                                           ierr)                                 &
                                           bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(in)  :: nnodes
    real(kind=C_DOUBLE),          intent(in)  :: x(*)
    real(kind=C_DOUBLE),          intent(in)  :: y(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_write_coordinates_2d_f
end interface 

interface
    subroutine mesh_read_coordinates_f(mptr,                                 &
                                        x,                                   &
                                        y,                                   &
                                        z,                                   &
                                        ierr)                                &
                                        bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    real(kind=C_DOUBLE),          intent(out)  :: x(*)
    real(kind=C_DOUBLE),          intent(out)  :: y(*)
    real(kind=C_DOUBLE),          intent(out)  :: z(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_read_coordinates_f
end interface 

interface
    subroutine mesh_read_coordinates_byindex_f(mptr,                          &
                                               idx,                           &
                                               buf,                           &
                                               ierr)                          &
                                               bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(in)  :: idx
    real(kind=C_DOUBLE),          intent(out) :: buf(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_read_coordinates_byindex_f
end interface

interface
    subroutine mesh_read_coordinates_1d_f(mptr,                                 &
                                          x,                                    &
                                          ierr)                                 &
                                          bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    real(kind=C_DOUBLE),          intent(out)  :: x(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_read_coordinates_1d_f
end interface 

interface
    subroutine mesh_read_coordinates_2d_f(mptr,                                 &
                                          x,                                    &
                                          y,                                    &
                                          ierr)                                 &
                                          bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    real(kind=C_DOUBLE),          intent(out) :: x(*)
    real(kind=C_DOUBLE),          intent(out) :: y(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_read_coordinates_2d_f
end interface 

interface
    subroutine mesh_write_connectivity_f(mptr,                            & 
                                         num,                             &
                                         idata,                           &
                                         ierr)                            &
                                         bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(in)  :: num
    integer(kind=C_INT),          intent(in)  :: idata(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_write_connectivity_f
end interface 

interface
    subroutine mesh_read_connectivity_f(mptr,                             & 
                                        idata,                            &
                                        ierr)                             &
                                        bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: idata(*)
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_read_connectivity_f
end interface 

interface
  subroutine mesh_connectivity_size_f(mptr,dataname,flen,isize,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    character(kind=C_CHAR),       intent(in)  :: dataname
    integer(kind=C_INT),          intent(in)  :: flen
    integer(kind=C_INT),          intent(out) :: isize
    integer(kind=C_INT),          intent(out) :: ierr
  end subroutine mesh_connectivity_size_f
end interface

interface
    subroutine mesh_get_type_f(mptr,mesh_type,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: mesh_type
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_get_type_f
end interface

interface
    subroutine mesh_get_elementtype_f(mptr,elem_type,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: elem_type
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_get_elementtype_f
end interface

interface
    subroutine mesh_get_dimension_f(mptr,d,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: d
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_get_dimension_f
end interface

interface
    subroutine mesh_get_nnodes_f(mptr,nnodes,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: nnodes
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_get_nnodes_f
end interface

interface
    subroutine mesh_get_nelem_f(mptr,nelem,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: nelem
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_get_nelem_f
end interface

interface
    subroutine mesh_get_elem_order_f(mptr,elem_order,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                  intent(in)  :: mptr
    integer(kind=C_INT),          intent(out) :: elem_order
    integer(kind=C_INT),          intent(out) :: ierr
    end subroutine mesh_get_elem_order_f
end interface
